# rust-sgx-sdk-playground

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile-bak  README.md  conf.mk
app/: CMakeLists.txt  Cargo.toml  Makefile  build.rs
cmake/: git.cmake  sgx.cmake
crypto/: CMakeLists.txt  Cargo.toml
crypto/app/: CMakeLists.txt  Cargo.toml  build.rs
crypto/app/src/: main.rs
crypto/enclave/: CMakeLists.txt  Cargo.toml  enclave.edl
crypto/enclave/src/: lib.rs
dns/: CMakeLists.txt
dns/app/: Cargo.toml  build.rs
dns/app/src/: main.rs
dns/enclave/: Cargo.toml  enclave.edl
dns/enclave/src/: lib.rs
enclave/: CMakeLists.txt  Cargo.toml  Enclave_t.c  Enclave_t.h  Makefile
hello-world/: CMakeLists.txt  README.md
hello-world-debug/: CMakeLists.txt  README.md
hello-world-debug/app/: CMakeLists.txt  Cargo.toml  build.rs
hello-world-debug/app/src/: main.rs
hello-world-debug/enclave/: CMakeLists.txt  enclave.edl  enclave.lds
hello-world-debug/enclave/src/: lib.rs
hello-world-i-dont-like/: CMakeLists.txt
hello-world-i-dont-like/app/: CMakeLists.txt  Cargo.toml  build.rs
hello-world-i-dont-like/app/src/: main.rs
hello-world-i-dont-like/enclave/: CMakeLists.txt
hello-world-without-cmake/: CMakeLists.txt  README.md
hello-world-without-cmake/app/: CMakeLists.txt  Cargo.toml  build.rs
hello-world-without-cmake/app/src/: main.rs
hello-world-without-cmake/enclave/: Cargo.toml
hello-world-without-cmake/enclave/src/: lib.rs
hello-world/app/: CMakeLists.txt  Cargo.toml  build.rs
hello-world/app/src/: main.rs
hello-world/enclave/: CMakeLists.txt  Cargo.toml
hello-world/enclave/src/: lib.rs
https-client/: CMakeLists.txt  Cargo.toml
https-client/app/: CMakeLists.txt  Cargo.toml  build.rs
https-client/app/src/: main.rs
https-client/enclave/: CMakeLists.txt  Cargo.toml  enclave.edl
https-client/enclave/src/: lib.rs
massive-stdio/: CMakeLists.txt
massive-stdio/app/: Cargo.toml
massive-stdio/app/src/: main.rs
massive-stdio/enclave/: CMakeLists.txt  enclave.edl
massive-stdio/enclave/src/: lib.rs
mini-ecdh/: CMakeLists.txt
mini-ecdh/alice/: dh.go  keygen.go
mini-ecdh/app/src/: main.rs
mini-ecdh/enclave/: Cargo.toml  enclave.edl
mini-ecdh/enclave/src/: lib.rs
prost-based-protobuf/: CMakeLists.txt
prost-based-protobuf/app/: Cargo.toml  build.rs
prost-based-protobuf/app/src/: main.rs
prost-based-protobuf/enclave/: Cargo.toml  build.rs  enclave.edl
prost-based-protobuf/enclave/src/: lib.rs
prost-based-protobuf/pb/: person.proto
scripts/: Cargo.config  play.sh
tls-server/: CMakeLists.txt  README.md
tls-server/app/: CMakeLists.txt  Cargo.toml  build.rs
tls-server/app/src/: main.rs
tls-server/client/: go.mod  main.go
tls-server/enclave/: Cargo.toml  enclave.edl
tls-server/enclave/src/: lib.rs
tls-server/pki/: end.fullchain  end.rsa
ue-remote-attestation/: CMakeLists.txt  README.md
ue-remote-attestation/app/: CMakeLists.txt  Cargo.toml  build.rs
ue-remote-attestation/app/src/: main.rs  ocall.rs
ue-remote-attestation/client-go/: cert.go  go.mod  main.go  utils.go
ue-remote-attestation/enclave/: CMakeLists.txt  Cargo.toml  enclave.edl
ue-remote-attestation/enclave/src/: attestation.rs  cert.rs  ecall.rs  hex.rs  lib.rs  x509.rs
ue-remote-attestation/enclave/src/crypto/: ecdsa.rs
ue-remote-attestation/pki/: ca.cert  ca.key  ca.srl  client.cert  client.csr  client.key  client.pkcs8  setup.sh  ssl.conf
