[package]
name = "enclave"
version = "1.0.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

[lib]
name = "enclave"
crate-type = ["staticlib"]

#[features]
#default = []

[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.0" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.0", features=["net"] }

[dependencies.http_req]
git = "https://github.com/mesalock-linux/http_req-sgx"
tag = "sgx_1.1.0"

[patch."https://github.com/apache/teaclave-sgx-sdk"]
sgx_tstd = { features = ["net"], git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.0" }