[package]
name = "enclave"
version = "1.0.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_tcrypto = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "v1.1.2" }
sgx_tstd    = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "v1.1.2" }
sgx_types   = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "v1.1.2" }

