[package]
name = "app"
version = "1.0.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.1" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.1" }

prost = "0.6"
prost-types = "0.6"
bytes = "0.5"

[build-dependencies]
cc = "1.0.50"
prost-build = "0.6"