[package]
name = "enclave"
version = "1.0.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.1" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.1" }

prost = { git = "https://github.com/mesalock-linux/prost-sgx" }
bytes = { git = "https://github.com/mesalock-linux/bytes-sgx" }
prost-types = { git = "https://github.com/mesalock-linux/prost-sgx" }

[build-dependencies]
prost-build = "0.6"