[package]
name = "enclave"
version = "1.0.0"
authors = ["Baidu"]
edition = "2018"

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types   = {rev="v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tstd    = {rev="v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", features = ["net"] }
sgx_tcrypto = {rev="v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tse     = {rev="v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_rand    = {rev="v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
chrono      = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki      = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64      = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna       = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint  = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec     = { version = "*", default-features = false}
httparse    = { version = "1.3.2", default-features=false }
itertools   = { version = "0.8", default-features = false, features = []}
rustls      = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }