[package]
name = "enclave"
version = "1.0.0"
authors = ["Baidu"]
edition = "2018"

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types   = {git = "https://github.com/apache/teaclave-sgx-sdk", rev="v1.1.0" }
sgx_tstd    = {git = "https://github.com/apache/teaclave-sgx-sdk", rev="v1.1.0", features = ["net"] }
sgx_tcrypto = {git = "https://github.com/apache/teaclave-sgx-sdk", rev="v1.1.0" }
sgx_tse     = {git = "https://github.com/apache/teaclave-sgx-sdk", rev="v1.1.0" }
sgx_rand    = {git = "https://github.com/apache/teaclave-sgx-sdk", rev="v1.1.0" }

chrono      = { git = "https://github.com/mesalock-linux/chrono-sgx" }
base64      = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna       = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint  = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec     = { version = "*", default-features = false}
httparse    = { version = "1.3.2", default-features=false }
itertools   = { version = "0.8", default-features = false, features = []}
rustls      = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx-client-cert-verifier-patch" }
webpki      = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }